[project]
name = "dicedb"
version = "0.1.1"
description = "A simple DiceDB client for Python"
readme = "README.md"
authors = [
    { name = "un4gt", email = "mt3085570450@outlook.com" }
]
requires-python = ">=3.8"
dependencies = [
    "protobuf>=5.29.4",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]
